pages/class/assassin/style.css
body {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    color: white;
}

li,
a {
    text-decoration: none;
    list-style: none;
    color: white;
}

/* navigation bar */

nav {
    display: flex;
    background-color: #2b2b2b;
    align-items: center;
    padding: 0 1rem 0 1rem;
}

.nav-container {
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 100%;
}

.logo>a {
    font-weight: bold;
    font-size: 1.2rem;
}

.logo>a:hover {
    transition: 0.5s;
    color: #7fffd4;
}

.nav-ul {
    display: flex;
    gap: 1rem;
}

.nav-li-class>a:hover {
    transition: 0.5s;
    color: #40e0d0;
}

.nav-li-boss>a:hover {
    transition: 0.5s;
    color: #dc143c;
}

@media (min-width: 1000px) {
    nav {
        justify-content: center;
    }

    .nav-container {
        display: flex;
        max-width: 925px;
        align-items: center;
        justify-content: flex-start;
        padding: 0 1rem 0 1rem;
        gap: 2rem;
    }

    .nav-ul {
        gap: 2.5rem;
    }
}


/* main content styles */

main {
    display: flex;
    background-color: #222222;
    min-height: 100vh;
    justify-content: center;
}

.main-content {
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: #2f2f2f;
    margin: 0;
    width: 100%;
}

@media (min-width: 1000px) {
    .main-content {
        border-radius: 10px;
        margin: 3rem;
        max-width: 1000px;
    }
}

/* content navigation */

.content-nav {
    display: flex;
    flex-direction: column;
    background-color: #1b1b1b;
    width: 100%;
    margin: 0;
}

.class {
    padding: 1rem 0 0 1rem;
    margin: 0;
    color: #ffff00;
}

.stat {
    padding-left: 1rem;
}

.content-nav-ul {
    display: none;
}

@media (min-width: 1000px) {
    .content-nav {
        border-radius: 10px 10px 0 0;
    }

    .class {
        padding: 2rem 0 0 2rem;
    }

    .stat {
        padding-left: 2rem;
    }
}

/* introduction */

#introduction {
    margin: .5rem;
    padding: .5rem;
    width: 95%;
}

#introduction>h3 {
    margin: 0 0 .5rem .5rem;
}

.introduction-content {
    padding: .1rem 1rem;
    background-color: #3b3b3b;
    border-radius: 10px;
}

.introduction-content>p>span {
    display: block;
    color: #ff0033;
}

/* abilities */

#abilities {
    margin: .5rem;
    padding: .5rem;
    width: 95%;
}

#abilities>h3 {
    margin: 0 0 .5rem .5rem;
}

.abilities-container {
    display: flex;
    justify-content: space-between;
    flex-direction: column;
    background-color: #3b3b3b;
    border-radius: 10px;
    padding: 1rem 1rem;
    gap: 2rem;
}

.abilities-content {
    display: flex;
    justify-content: space-between;
    border-radius: 10px;
    gap: 1rem;
    min-height: 450px;
}

.ability-select {
    display: flex;
    background-color: #2b2b2b;
    flex-direction: column;
    justify-content: space-between;
    padding: 0.5rem;
    max-width: 3rem;
    border-radius: 10px;
    flex-basis: 10%;
    max-height: 425px;
}

.ability-select button {
    background-color: #7fffd4dd;
    border: none;
    border-radius: 5px;
    padding: 0.5rem;
    cursor: pointer;
}

.ability-show {
    display: flex;
    flex-grow: 1;
    flex-basis: 90%;
}

.ability-show img {
    max-height: 50px;
}

.abilities-video {
    display: flex;
    align-items: center;
    justify-content: center;
}

.abilities-video video {
    display: none;
    border: 2px solid #1b1b1b;
    border-radius: 10px;
    max-width: 85vw;
}

@media (min-width: 1000px) {
    .abilities-container {
        flex-direction: row;
    }

    .abilities-content {
        flex-direction: column;
        align-items: flex-start;
    }

    .ability-select {
        flex-direction: row;
        align-items: center;
        justify-content: center;
        max-width: 100%;
        gap: 2rem;
}

    .ability-show {
        display: flex;
        justify-content: center;
        max-width: 425px;
        padding: 0 0 0rem 1rem;
    }

    .abilities-video {
        justify-content: center;
        flex: 1;
    }

    .abilities-video video {
        max-width: 95%;
        border: 5px solid #1b1b1b;
    }
}

/* ability */

.ability {
    display: none;
    flex-direction: column;
    gap: 1rem;
    width: 100%;
}

.ability-title {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.ability-description {
    display: flex;
    flex-direction: column;
}

/* equipments */

#equipments {
    margin: .5rem;
    padding: .5rem;
    width: 95%;
}

#equipments>h3 {
    margin: 0 0 .5rem .5rem;
}

.equipments-content {
    padding: .1rem 1rem;
    background-color: #3b3b3b;
    border-radius: 10px;
}

/* strategies */

#strategies {
    margin: .5rem;
    padding: .5rem;
    width: 95%;
}

#strategies>h3 {
    margin: 0 0 .5rem .5rem;
}

.strategies-content {
    padding: .1rem 1rem;
    background-color: #3b3b3b;
    border-radius: 10px;
}

/* footer styles */

footer {
    display: flex;
    background-color: #2b2b2b;
    color: white;
    margin-top: auto;
    justify-content: center;
}

footer>p {
    font-size: 0.9rem;
}

